--- a/index.html
+++ b/index.html
@@ -1,60 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMI Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>BMI Calculator</h1>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<title>Styled and Responsive Table</title>
+</head>
+<body>
 
-      <form class="calculator">
-        <div>
-          <label for="weight">Weight (kg)</label>
-          <input type="number" id="weight" min="0" step="0.01" value="0" />
-        </div>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td data-label="Name">John</td>
+            <td data-label="Email">john@example.com</td>
+            <td data-label="Phone">1237890</td>
+        </tr>
+        <tr>
+            <td data-label="Name">Jane</td>
+            <td data-label="Email">jane@example.com</td>
+            <td data-label="Phone">9873210</td>
+        </tr>
+        <tr>
+            <td data-label="Name">Mike</td>
+            <td data-label="Email">mike@example.com</td>
+            <td data-label="Phone">4560123</td>
+        </tr>
+        <tr>
+            <td data-label="Name">Luke</td>
+            <td data-label="Email">luke@example.com</td>
+            <td data-label="Phone">87567454</td>
+        </tr>
+        <tr>
+            <td data-label="Name">Jude</td>
+            <td data-label="Email">jude@example.com</td>
+            <td data-label="Phone">43243245</td>
+        </tr>
+        
+    </tbody>
+</table>
 
-        <div>
-          <label for="height">Height (cm)</label>
-          <input type="number" id="height" min="0" step="0.01" value="0" />
-        </div>
-
-        <div>
-          <button type="reset">Reset</button>
-          <button type="submit">Submit</button>
-        </div>
-      </form>
-
-      <section class="output">
-        <h3>Your BMI is</h3>
-        <p id="bmi">0</p>
-        <p id="desc">N/A</p>
-      </section>
-
-      <section class="bmi-scale">
-        <div style="--color: var(--underweight)">
-          <h4>Underweight</h4>
-          <p>&lt; 18.5</p>
-        </div>
-
-        <div style="--color: var(--normal)">
-          <h4>Normal</h4>
-          <p>18.5 – 25</p>
-        </div>
-
-        <div style="--color: var(--overweight)">
-          <h4>Overweight</h4>
-          <p>25 – 30</p>
-        </div>
-
-        <div style="--color: var(--obese)">
-          <h4>Obese</h4>
-          <p>≥ 30</p>
-        </div>
-      </section>
-    </div>
-  </body>
+</body>
 </html>
